<resources>
    <string name="app_name">Diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_day">DayActivity</string>
    <string name="select_date">Select date</string>
    <string name="set_begin">set start</string>
    <string name="set_end">set finish</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="day">To-do list</string>
</resources>
